adds delete method
